# WordSaladChopper

./: .gitignore  README.md  pyproject.toml
configs/: train.yaml
reproduced/: README.md  requirements.txt  run.py
reproduced/configs/: eval.yaml  gen.yaml  train.yaml
reproduced/configs/continuation_cues/: version_2.yaml
reproduced/configs/eval_datasets/: aime25_temp_0_6_top0p95_n8.yaml  gpqa_diamond_temp_0_0_top1p0_n1.yaml  gpqa_diamond_temp_0_6_top0p95_n1.yaml  gsm8k_temp_0_0_top1p0_n1.yaml  gsm8k_temp_0_6_top0p95_n1.yaml  math500_temp_0_0_top1p0_n1.yaml  math500_temp_0_6_top0p95_n1.yaml
reproduced/configs/extractor/: layer27_full.yaml  layer31_full.yaml
reproduced/configs/gen_params/: temp_0_0_top1p0_4k.yaml  temp_0_0_top1p0_8k.yaml  temp_0_6_top0p95_4k.yaml  temp_0_6_top0p95_8k.yaml
reproduced/configs/labeler/: rule.yaml  semantic.yaml
reproduced/configs/prober/: logistic.yaml  mlp.yaml
reproduced/configs/resources/: dataset_paths.yaml  eval_dataset_paths.yaml
reproduced/configs/train_mix/: s1_temp_0_6_top0p95.yaml
reproduced/configs/trimmer/: streak_filter_rollback_0p5_2_10_5.yaml
reproduced/pipeline/: builder.py  collector.py  config.py  extractor.py  labeler.py  prober.py  trimmer.py  utils.py
reproduced/pipeline/datasets/: __init__.py  base.py
reproduced/pipeline/inference/: __init__.py  vllm_backend.py
reproduced/pipeline/pipelines/: __init__.py  continuous_gen.py  prober_training.py  trim_eval.py
reproduced/sh/: run_eval.sh  run_full_gen.sh  run_regen.sh  run_train.sh
sh/: generate.sh  training.sh
src/: generate.py  train_prober.py
wscgen/: chopper.py  example.py  generate.py  prober.py  utils.py  wsc_datasets.py
wscgen/pipeline/: __init__.py  builder.py  collector.py  config.py  extractor.py  labeler.py  utils.py
wscgen/training/: __init__.py  prober_training.py
(+10 files in other folders)
